# ashare-lowfreq-research

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
configs/: demo_research.toml  research_excess_v3.toml  research_industry_v4_v1.toml  research_industry_v4_v1_1.toml  research_industry_v4_v2_validation_longer.toml  three_day_momentum.toml
docs/: data-storage.md  factors.md  modeling.md  mvp.md  research-pipeline.md  strategy-v1-1-build-log.md  strategy-v1-1-drawdown-months.md  strategy-v1-1-feb-2026-carry-trade.md  strategy-v1-1-month-contrast.md  strategy-v1-1-premarket-runbook.md  strategy-v1-1-return-attribution.md  strategy-v1-build-log.md  strategy-v2-capacity-check.md  strategy-v2-execution-phase-summary.md  strategy-v2-ic-diagnosis.md  strategy-v2-live-readiness-checklist.md  strategy-v2-return-source-attribution.md  strategy-v2-risk-exposure-check.md  strategy-v2-roadmap.md  strategy-v2-strong-trim-probe.md  tushare-sqlite-sync.md
examples/: strategy_template.py
research/factors/: basic_factor_panel.parquet  full_factor_panel.parquet
scripts/: run_v1_1_premarket.sh  run_v1_1_premarket脚本使用指南.md
storage/: README.md  catalog.json
strategies/: 44ca5824475a_buy_and_hold.py  three_day_momentum.py
tests/: test_capacity_analysis.py  test_capacity_execution.py  test_cli_universes.py  test_latest_inference.py  test_monthly_comparison.py  test_premarket_reference.py  test_research_config.py  test_risk_exposure_analysis.py  test_score_strategy_exit_policy.py  test_tushare_sqlite_sync.py  test_universe_gate.py  test_web_app.py
(+80 files in other folders)
