[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-backtest"
version = "0.1.0"
description = "Personal A-share low-frequency backtesting tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ashare-backtest = "ashare_backtest.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
